--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.coolplay.company</groupId>
-  <artifactId>coolplay-company-platform</artifactId>
+  <groupId>com.coolplay.user</groupId>
+  <artifactId>coolplay-user-service</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>coolplay-company-platform Maven Webapp</name>
+  <name>coolplay-user-service Maven Webapp</name>
   <url>http://maven.apache.org</url>
 
   <!-- 阿里云maven仓库 -->
@@ -437,7 +437,7 @@
   </profiles>
 
   <build>
-    <finalName>coolplay-company-platform</finalName>
+    <finalName>coolplay-user-service</finalName>
     <filters>
       <filter>src/main/resources/profile/profile.${env}.properties</filter>
     </filters>
