--- a/src/main/resources/properties/value.properties
+++ b/src/main/resources/properties/value.properties
@@ -1,7 +1,7 @@
 # Spring security
-security.token.front=coolplay_company_token
+security.token.front=coolplay_user_token
 security.token.header=X-Auth-Token
-security.token.secret=coolplay_company!@#$
+security.token.secret=coolplay_user!@#$
 security.token.expiration=86400
 
 #文件上传路径
