[其他]说明：token过期时间调整 [影响]token过期时间调整

--- a/src/main/resources/properties/value.properties
+++ b/src/main/resources/properties/value.properties
@@ -2,7 +2,8 @@
 security.token.front=coolplay_user_token
 security.token.header=X-Auth-Token
 security.token.secret=coolplay_user!@#$
-security.token.expiration=86400
+#security.token.expiration=86400
+security.token.expiration=2592000
 
 #文件上传路径
 upload.folder=upload
