[其他]说明：首页天气接口添加 [影响]首页天气接口添加

--- a/src/main/resources/properties/value.properties
+++ b/src/main/resources/properties/value.properties
@@ -13,3 +13,5 @@ message.userId=963360
 message.account=Yanzhengma
 message.password=123@Yanma
 message.uri=http://www.mxtong.net.cn/GateWay/Services.asmx/DirectSend
+
+weather.url=http://218.241.170.194:8100/users
