--- a/src/main/resources/properties/value.properties
+++ b/src/main/resources/properties/value.properties
@@ -15,3 +15,4 @@ message.password=123@Yanma
 message.uri=http://www.mxtong.net.cn/GateWay/Services.asmx/DirectSend
 
 weather.url=http://218.241.170.194:8100/users
+weather.picture.url=http://218.241.170.194:8100/index
