[其他]说明：update [影响]update

--- a/src/main/resources/properties/value.properties
+++ b/src/main/resources/properties/value.properties
@@ -16,3 +16,4 @@ message.uri=http://www.mxtong.net.cn/GateWay/Services.asmx/DirectSend
 
 weather.url=http://218.241.170.194:8100/users
 weather.picture.url=http://218.241.170.194:8100/index
+weather.picture.batch.url=http://218.241.170.194:8100/getImage
