[其他]说明：u [影响]u

--- a/src/main/resources/profile/profile.dev.properties
+++ b/src/main/resources/profile/profile.dev.properties
@@ -18,3 +18,7 @@ redis.max_wait=10000
 redis.timeout=10000
 redis.blockWhenExhausted=true
 redis.testOnBorrow=true
+
+#elasticsearch
+elasticsearch_cluster_nodes=123.56.249.199:9300
+elasticsearch_cluster_name=davdian-search
