--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,13 @@
 
   <dependencies>
     <dependency>
+      <groupId>com.wutuobang.search</groupId>
+      <artifactId>search-service</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+
+
+    <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
       <version>${servlet-version}</version>
