--- a/pom.xml
+++ b/pom.xml
@@ -68,11 +68,11 @@
   </properties>
 
   <dependencies>
-    <dependency>
+    <!--<dependency>
       <groupId>com.wutuobang.search</groupId>
       <artifactId>search-service</artifactId>
       <version>1.0-SNAPSHOT</version>
-    </dependency>
+    </dependency>-->
 
 
     <dependency>
