--- a/pom.xml
+++ b/pom.xml
@@ -52,8 +52,9 @@
     <commons-io-version>2.5</commons-io-version>
     <commons-codec-version>1.10</commons-codec-version>
     <commons-configuration-version>1.10</commons-configuration-version>
-    <slf4j-version>1.7.19</slf4j-version>
-    <log4j-version>1.2.17</log4j-version>
+    <!--<slf4j-version>1.7.19</slf4j-version>
+    <log4j-version>1.2.17</log4j-version>-->
+    <log4j.version>2.6.2</log4j.version>
     <fastjson-version>1.2.30</fastjson-version>
     <shiro-version>1.3.2</shiro-version>
     <kaptcha-version>0.0.9</kaptcha-version>
@@ -65,14 +66,42 @@
     <jjwt.version>0.6.0</jjwt.version>
     <mapper.version>4.1.5</mapper.version>
     <javax.validation.version>1.1.0.Final</javax.validation.version>
+    <fasterxml.jackson.version>2.7.4</fasterxml.jackson.version>
   </properties>
 
   <dependencies>
-    <!--<dependency>
+
+    <dependency>
       <groupId>com.wutuobang.search</groupId>
       <artifactId>search-service</artifactId>
       <version>1.0-SNAPSHOT</version>
-    </dependency>-->
+      <exclusions>
+        <exclusion>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-databind</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-core</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-annotations</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>com.fasterxml.jackson.module</groupId>
+          <artifactId>jackson-module-jaxb-annotations</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-api</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-core</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
 
 
     <dependency>
@@ -148,7 +177,7 @@
       <version>2.3.0</version>
     </dependency>
 
-    <dependency>
+    <!--<dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
       <version>${slf4j-version}</version>
@@ -162,6 +191,16 @@
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
       <version>${log4j-version}</version>
+    </dependency>-->
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <version>${log4j.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>${log4j.version}</version>
     </dependency>
     <dependency>
       <groupId>mysql</groupId>
@@ -223,34 +262,29 @@
     </dependency>
 
     <!--spring-json依赖 Start-->
-    <dependency>
-      <groupId>org.codehaus.jackson</groupId>
-      <artifactId>jackson-mapper-asl</artifactId>
-      <version>1.9.13</version>
-    </dependency>
 
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.5.0</version>
+      <version>${fasterxml.jackson.version}</version>
     </dependency>
 
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-core</artifactId>
-      <version>2.5.0</version>
+      <version>${fasterxml.jackson.version}</version>
     </dependency>
 
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-annotations</artifactId>
-      <version>2.5.0</version>
+      <version>${fasterxml.jackson.version}</version>
     </dependency>
 
     <dependency>
       <groupId>com.fasterxml.jackson.dataformat</groupId>
       <artifactId>jackson-dataformat-xml</artifactId>
-      <version>2.5.0</version>
+      <version>${fasterxml.jackson.version}</version>
     </dependency>
     <!--spring-json依赖 End-->
 
