[其他]说明：推送功能添加 [影响]推送功能添加

--- a/src/main/resources/properties/value.properties
+++ b/src/main/resources/properties/value.properties
@@ -17,3 +17,6 @@ message.uri=http://www.mxtong.net.cn/GateWay/Services.asmx/DirectSend
 weather.url=http://218.241.170.194:8100/users
 weather.picture.url=http://218.241.170.194:8100/index
 weather.picture.batch.url=http://218.241.170.194:8100/getImage
+
+jpush.appKey=9b1dbf6a02bdb51ea6bf269a
+jpush.masterSecret=a2a521af82fafd7d63ec094e
