--- a/src/main/resources/profile/profile.prod.properties
+++ b/src/main/resources/profile/profile.prod.properties
@@ -22,3 +22,6 @@ redis.testOnBorrow=true
 #elasticsearch
 elasticsearch_cluster_nodes=39.96.113.153:9300
 elasticsearch_cluster_name=davdian-search
+
+# 极光推送环境
+jpush.apnsProduction=true
